--- a/src/main/resources/db/migration/1.0.0/changelog-1.0.0.yaml
+++ b/src/main/resources/db/migration/1.0.0/changelog-1.0.0.yaml
@@ -3,3 +3,5 @@ databaseChangeLog:
       file: db/migration/1.0.0/create-table-roles.yaml
   - include:
       file: db/migration/1.0.0/create-table-users.yaml
+  - include:
+      file: db/migration/1.0.0/create-table-user-roles.yaml
