--- a/src/main/resources/db/migration/1.0.0/create-table-roles.yaml
+++ b/src/main/resources/db/migration/1.0.0/create-table-roles.yaml
@@ -17,3 +17,4 @@ databaseChangeLog:
                   type: varchar(30)
                   constraints:
                     nullable: false
+                    unique: true
