--- a/src/main/resources/db/migration/db-changelog-master.yaml
+++ b/src/main/resources/db/migration/db-changelog-master.yaml
@@ -1,3 +1,7 @@
 databaseChangeLog:
   - include:
       file: db/migration/1.0.0/changelog-1.0.0.yaml
+  - include:
+      file: db/migration/1.1.0/changelog-1.1.0.yaml
+  - include:
+      file: db/migration/1.2.0/changelog-1.2.0.yaml
