--- a/src/main/resources/db/migration/1.0.0/create-table-roles.yaml
+++ b/src/main/resources/db/migration/1.0.0/create-table-roles.yaml
@@ -2,6 +2,11 @@ databaseChangeLog:
   - changeSet:
       id: create-table-roles
       author: IgorKonevsky
+      preConditions:
+        - onFail: HALT
+        - tableExists:
+            tableName: roles
+            onFail: MARK_RAN
       changes:
         - createTable:
             tableName: roles
