--- a/src/main/resources/db/migration/1.0.0/create-table-users.yaml
+++ b/src/main/resources/db/migration/1.0.0/create-table-users.yaml
@@ -2,6 +2,11 @@ databaseChangeLog:
   - changeSet:
       id: create-table-users
       author: IgorKonevsky
+      preConditions:
+        - onFail: HALT
+        - tableExists:
+            tableName: users
+            onFail: MARK_RAN
       changes:
         - createTable:
             tableName: users
