--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,14 +2,14 @@ spring:
   application:
     name: bank_rest
   datasource:
-    url: jdbc:postgresql://localhost:5432/bankdb
+    url: jdbc:postgresql://postgres:5432/bankdb
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
   liquibase:
     change-log: db/migration/db-changelog-master.yaml
     enabled: true
-    url: jdbc:postgresql://localhost:5432/bankdb
+    url: jdbc:postgresql://postgres:5432/bankdb
     default-schema: public
     liquibase-schema: public
     user: postgres
