--- a/src/main/resources/db/migration/1.0.0/create-table-user-roles.yaml
+++ b/src/main/resources/db/migration/1.0.0/create-table-user-roles.yaml
@@ -2,6 +2,15 @@ databaseChangeLog:
   - changeSet:
       id: create-table-user-roles
       author: IgorKonevsky
+      preConditions:
+        - onFail: HALT
+        - tableExists:
+            tableName: users
+        - tableExists:
+            tableName: roles
+        - tableExists:
+            tableName: user_roles
+            onFail: MARK_RAN
       changes:
         - createTable:
             tableName: user_roles
