--- a/src/main/resources/db/migration/1.1.0/create-table-invalid-tokens.yaml
+++ b/src/main/resources/db/migration/1.1.0/create-table-invalid-tokens.yaml
@@ -2,6 +2,11 @@ databaseChangeLog:
   - changeSet:
       id: create-table-invalid-tokens.yaml
       author: IgorKonevsky
+      preConditions:
+        - onFail: HALT
+        - tableExists:
+            tableName: invalid_tokens
+            onFail: MARK_RAN
       changes:
         - createTable:
             tableName: invalid_tokens
