--- a/src/main/resources/db/migration/1.2.0/create-table-cards.yaml
+++ b/src/main/resources/db/migration/1.2.0/create-table-cards.yaml
@@ -2,6 +2,13 @@ databaseChangeLog:
   - changeSet:
       id: create-table-cards
       author: IgorKonevsky
+      preConditions:
+        - onFail: HALT
+        - tableExists:
+            tableName: users
+        - tableExists:
+            tableName: cards
+            onFail: MARK_RAN
       changes:
         - createTable:
             tableName: cards
